# Dog-Breed-Classifier-FastAPI-Tensor-

./: .gitignore  PROJECT_BRIEFING.md  README.md  app.py  download_dataset.py  pyproject.toml  pyrightconfig.json
huggingface_space/: DEPLOY.md  Dockerfile  README.md  requirements.txt
model_experiments/: plot_results.py  train_compare.py
model_experiments/models/: baseline_cnn.py  deeper_cnn.py  efficientnetb0_finetune.py  efficientnetb0_frozen.py  mobilenet_finetune.py  mobilenet_frozen.py
static/: app.js  style.css
templates/: index.html
